# old-uscauv-ros-config

./: README.md  ros_setup.py
auv_model/: CMakeLists.txt  manifest.xml  package.xml
auv_model/dummy_robot/: dummy_thruster.yaml  dynamics.yaml  structures.urdf  thrusters.yaml
auv_model/launch/: dummy_robot_thruster_models.launch  seabee3_thruster_models.launch  upload_model.launch
auv_model/seabee3/: dynamics.yaml  seabotix_btd150.yaml  structures.urdf
camera_model/: CMakeLists.txt  manifest.xml  package.xml
camera_model/driver/: camera1_driver.yaml  camera2_driver.yaml  camera3_driver.yaml  camera4_driver.yaml
camera_model/model/: camera1_model.yaml  camera2_model.yaml  camera3_model.yaml  camera4_model.yaml
camera_model/model/stereo_cam_model/: camera3_model.yaml  camera4_model.yaml
color_model/: CMakeLists.txt  manifest.xml  package.xml
color_model/launch/: upload_colors.launch  upload_test_colors.launch
color_model/svm/: blaze_orange_fast.yaml  blaze_orange_ped_linear.yaml  blaze_orange_qual1.yaml  blaze_orange_qual2.yaml  blaze_orange_slow.yaml  orange_buoy.yaml  pipe_incomplete.yaml  white.yaml  yellow_simple.yaml
controls_config/: CMakeLists.txt  manifest.xml  package.xml
controls_config/axes/: pd.yaml  simple_pid.yaml
controls_config/launch/: upload_config.launch
controls_config/params/: simple_pid.yaml
controls_config/thrusters/: default_with_floor.yaml
dummy_robot_config/: dummy_robot_model.yaml  manifest.xml
dummy_robot_config/launch/: upload_model.launch
global_config/: CMakeLists.txt  manifest.xml  package.xml
global_config/launch/: environment_params.launch
global_config/robot_environment/: environment_constants.yaml  environment_maps.yaml
joystick_config/: CMakeLists.txt  manifest.xml  package.xml
joystick_config/launch/: upload_joystick_assignments.launch
joystick_config/params/: joystick_ps3.yaml  joystick_xbox360.yaml
object_model/: CMakeLists.txt  manifest.xml  package.xml
object_model/launch/: upload_objects.launch
object_model/stl/: bins.STL  gate.STL  hedge.STL  octagon.STL  pipe.stl  sphere.stl  target.STL
object_model/unimodal/: buoy.yaml  global.yaml  magic_buoy.yaml  notecard.yaml  pipe.yaml  traffic_light.yaml  traffic_light_diffusion.yaml  traffic_light_endcap.yaml  traffic_light_tube.yaml
seabee3_config/: manifest.xml
shape_model/: CMakeLists.txt  manifest.xml  package.xml
shape_model/launch/: upload_shapes.launch  upload_test_shapes.launch
teleop_config/: manifest.xml
teleop_config/params/: joystick_xbox360.yaml
uscauv_device/: CMakeLists.txt  manifest.xml  package.xml
uscauv_device/udev/: 81-seabee.rules  82-uscauv.rules  install_seabee_udev.sh
uscauv_ros_config/: CMakeLists.txt  package.xml
vision_config/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vision_config/launch/: upload_segmentation.launch
vision_config/params/: segmentation.yaml
