<package>
  <name>auv_model</name>
  <version>0.0.0</version>
  <description>Models for USC AUV robots.</description>
  <maintainer email="turtlecannon@gmail.com">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/auv_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dylan Foster</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <!-- <build_depend>robot_state_publisher</build_depend> -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>orocos_kdl</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>robot_state_publisher</test_depend> -->

</package>