<package>
  <name>camera_model</name>
  <version>0.0.0</version>
  <description>camera_model</description>
  <maintainer email="">nalyd</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/camera_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author>nalyd</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>