<package>
  <name>color_model</name>
  <version>0.0.0</version>
  <description>Color models for use in USC AUV team color classifier.</description>
  <maintainer email="">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/color_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dylan Foster</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>