<package>
  <name>global_config</name>
  <version>0.0.0</version>
  <description>General purpose config files for USC AUV Team ROS projects.</description>
  <maintainer email="">Dylan Foster</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/global_config</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dylan Foster</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>